--- a/configs/app/public.toml
+++ b/configs/app/public.toml
@@ -18,27 +18,27 @@ ssl_mode = "app_disable"
 [pgsql.write]
 host = "169.2.14.2"
 port = 5432
-database = "postgres"
+db = "postgres"
 user = "write"
 pwd = "write_pwd"
 
 [pgsql.read]
 host = ["169.2.14.3"]
 port = [5432]
-database = ["postgres"]
+db = ["postgres"]
 user = ["read"]
 pwd = ["read_pwd"]
 
 [client.pgsql.write]
-host = "169.2.14.111111111"
+host = "169.2.14.1111"
 port = 5432
-database = "postgres"
+db = "postgres"
 user = "root"
 pwd = "2ud8scsdc"
 [client.pgsql.read]
 host = ["169.2.14.1111", "169.2.14.2222"]
 port = [5432]
-database = ["postgres"]
+db = ["postgres"]
 user = ["root"]
 pwd = ["2ud8scsdc"]
 
