--- a/configs/app/init.toml
+++ b/configs/app/init.toml
@@ -1,5 +1,7 @@
 enable = true # 也是sub的默认值
-env = "dev" # dev / fat / uat / pro , 也是sub的默认值
+env = "dev" # dev / fat / uat / pro
+
+def_lang = "zh-Hans" # zh-Hans / zh / en
 
 [account]
 enable = true
