--- a/configs/app/init.toml
+++ b/configs/app/init.toml
@@ -2,6 +2,8 @@ enable = true # 也是sub的默认值
 env = "dev" # dev / fat / uat / pro
 
 log_file_name_format = "06-01-02"
+log_file_level = -1 # 0(fatal) 1(panic) 2(error) 3(warn) 4(info) 5(debug)
+
 def_lang = "zh-Hans" # zh-Hans / zh / en
 
 [account]
