--- a/configs/app/init.toml
+++ b/configs/app/init.toml
@@ -1,10 +1,15 @@
 enable = true # 也是sub的默认值
 env = "dev" # dev / fat / uat / pro
 
-log_file_name_format = "06-01-02"
-log_file_level = 3 # 0(fatal) 1(panic) 2(error) 3(warn) 4(info) 5(debug)
-
 def_lang = "zh-Hans" # zh-Hans / zh / en
+
+[log]
+out_enable = false
+out_level = 5 # 0(fatal) 1(panic) 2(error) 3(warn) 4(info) 5(debug)
+out_format = "06-01-02"
+file_check_interval = 60 # min
+file_max_age = 30  # day
+file_max_size = 100  # MB
 
 [account]
 enable = true
