--- a/configs/app/init.toml
+++ b/configs/app/init.toml
@@ -5,11 +5,11 @@ def_lang = "zh-Hans" # zh-Hans / zh / en
 
 [log]
 out_enable = false
-out_level = 5 # 0(fatal) 1(panic) 2(error) 3(warn) 4(info) 5(debug)
-out_format = "06-01-02"
-file_check_interval = 60 # min
-file_max_age = 30  # day
-file_max_size = 100  # MB
+out_level = 5 # 输出级别，0(fatal) 1(panic) 2(error) 3(warn) 4(info) 5(debug)
+out_format = "06-01-02" # 可以按时间分割，06-01-02 15:04:05.000
+file_check_interval = 60 # 检查间隔，min
+file_max_age = 30  # 保留时间，day
+file_max_size = 100  # 单文件最大大小，MB
 
 [account]
 enable = true
