--- a/configs/app/init.toml
+++ b/configs/app/init.toml
@@ -1,7 +1,7 @@
 enable = true # 也是sub的默认值
 env = "dev" # dev / fat / uat / pro
 
-def_lang = "zh-Hans" # zh-Hans / zh / en
+def_lang = "en-US" # zh-CN / en-US  必须是已有的语言
 
 [log]
 out_enable = false
