--- a/configs/uat/init.toml
+++ b/configs/uat/init.toml
@@ -1,5 +1,8 @@
 env_name = "环境_预上线"
 
+[log]
+out_level = 6 # 输出级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
+
 [account]
 enable = true
 
