--- a/configs/pro/init.toml
+++ b/configs/pro/init.toml
@@ -3,7 +3,7 @@ env_name = "环境_正式"
 [log]
 out_level = 4 # 输出级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
 
-[account]
+[auth]
 enable = true
 
 [client]
