--- a/configs/pro/init.toml
+++ b/configs/pro/init.toml
@@ -1,7 +1,8 @@
 env_name = "环境_正式"
 
 [log]
-out_level = 4 # 输出级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
+con_levels = [] # 打印级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
+out_levels = [1,2,3,4] # 输出级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
 
 [auth]
 enable = true
