--- a/configs/uat/init.toml
+++ b/configs/uat/init.toml
@@ -1,9 +1,13 @@
 env_name = "环境_预上线"
 
 [log]
-out_level = 6 # 输出级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
+con_levels = [] # 打印级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
+out_levels = [1,2,3,4,5,6] # 输出级别，1(fatal) 2(panic) 3(error) 4(warn) 5(info) 6(debug)
 
-[account]
+[lang]
+defautl = "zh-CN" # zh-CN / en-US  必须是已有的语言
+
+[auth]
 enable = true
 
 [client]
