--- a/configs/app/init.toml
+++ b/configs/app/init.toml
@@ -10,7 +10,7 @@ file_max_age = 30  # 保留时间，day
 file_max_size = 100  # 单文件最大大小，MB
 
 [lang]
-defautl = "en-US" # zh-CN / en-US  必须是已有的语言
+default = "en-US" # zh-CN / en-US  必须是已有的语言
 
 [auth]
 enable = true
