--- a/configs/app/public.toml
+++ b/configs/app/public.toml
@@ -15,14 +15,15 @@ timezone = "Asia/Shanghai" # 时区
 ssl_mode = "disable" # ssl模式
 
 max_retries = 3 # 连接失败重试次数
-retry_delay = 3 # 连接失败重试间隔
+retry_delay = 2 # 连接失败重试间隔
+retry_max_delay = 30 # 连接失败最大重试间隔
 
 max_open = 1000 # 连接池最大连接数
 max_idle = 500 # 连接池最大空闲连接数
 max_life_min  = 3 # 连接池最大存活时间
 max_idle_min = 1 # 连接池最大空闲时间
 
-health_check_interval = 1 # 健康检查间隔(m)
+health_check_interval = 10 # 健康检查间隔(m)
 auto_reconnect = true # 自动重连
 query_timeout = 5 # 查询超时时间(s)
 
